<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".listActivity"
    tools:showIn="@layout/activity_list">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/음식추천"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.161" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="169dp"
        android:layout_height="111dp"
        android:layout_marginTop="52dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/한식"
        android:cropToPadding="true"
        android:onClick="onClick01"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toStartOf="@+id/imageButton2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/korea_picture" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="169dp"
        android:layout_height="111dp"
        android:layout_marginTop="52dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/중식"
        android:cropToPadding="true"
        android:onClick="onClick02"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toEndOf="@+id/imageButton"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/china_picture" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="169dp"
        android:layout_height="111dp"
        android:layout_marginTop="24dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/일식"
        android:cropToPadding="true"
        android:onClick="onClick03"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toStartOf="@+id/imageButton4"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton"
        app:srcCompat="@drawable/japan_picture" />

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="169dp"
        android:layout_height="111dp"
        android:layout_marginTop="24dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/양식"
        android:cropToPadding="true"
        android:onClick="onClick04"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toEndOf="@+id/imageButton3"
        app:layout_constraintTop_toBottomOf="@+id/imageButton2"
        app:srcCompat="@drawable/pizza_picture" />

    <ImageButton
        android:id="@+id/imageButton5"
        android:layout_width="169dp"
        android:layout_height="111dp"
        android:layout_marginTop="24dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/기타"
        android:cropToPadding="true"
        android:onClick="onClick05"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton4"
        app:srcCompat="@drawable/others_picture" />

</androidx.constraintlayout.widget.ConstraintLayout>